fixed overflowing

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -69,7 +69,7 @@
     .heroImg {
         position: absolute;
         right: -5rem;
-        bottom: 5rem;
+        bottom: 0;
         width: 100%;
         overflow: hidden;
         transform: translateZ(0);
