--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,6 +16,11 @@ body {
     overflow-x: hidden;
 }
 
+#__next {
+    position: relative;
+    overflow: hidden;
+}
+
 p,
 span {
     font-size: 1rem;
